--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 15%;
+  margin: 0 auto;
 }
